# KDiamondStripped

./: CMakeCache.txt  CMakeLists.txt  Makefile  Project.cbp  README.md  benchmarksuite.cpp  benchmarksuite.h  board.cpp  board.h  cmake_install.cmake  colorParams.txt  colorRes.txt  diamond.cpp  diamond.h  exp1.txt  figure.cpp  figure.h  game.cpp  game.h  gameparams.cpp  gameparams.h  gamestate.cpp  gamestate.h  helloworld.txt  kdiamond-stripped  list.h  main.cpp  mask.cpp  mask.h  maskParams.txt  maskScript.sh  movesParams.txt  movesRes.txt  observable.h  options.h  options_parser.h  player.cpp  player.h  point.cpp  point.h  (+10 more)
levels/: params.txt
levels/masks/: mask-1.txt  mask-10.txt  mask-11.txt  mask-12.txt  mask-13.txt  mask-14.txt  mask-15.txt  mask-16.txt  mask-17.txt  mask-18.txt  mask-19.txt  mask-2.txt  mask-3.txt  mask-4.txt  mask-5.txt  mask-6.txt  mask-7.txt  mask-8.txt  mask-9.txt
statistiche/: maskParams.txt  maskres.txt
tests/: redBit.txt
